图片和表单一起提交测试

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,14 @@ server.port=8888
 server.compression.enabled: true
 server.compression.min-response-size: 1
 server.connection-timeout=5000
-#Ä¬ÈÏÖ§³ÖÎÄ¼şÉÏ´«
+#é»˜è®¤æ”¯æŒæ–‡ä»¶ä¸Šä¼ .
 spring.http.multipart.enabled=true
-#Ö§³ÖÎÄ¼şĞ´Èë´ÅÅÌ
+#Ö§æ”¯æŒæ–‡ä»¶å†™å…¥ç£ç›˜.
 spring.http.multipart.file-size-threshold=0
-#×î´óÖ§³ÖÎÄ¼ş´óĞ¡
+#æœ€å¤§æ”¯æŒæ–‡ä»¶å¤§å°
 spring.http.multipart.max-file-size=5000Mb
-#×î´óÖ§³ÖÇëÇó´óĞ¡
+# æœ€å¤§æ”¯æŒè¯·æ±‚å¤§å°
 spring.http.multipart.max-request-size=5000Mb
+
+
+imgPath.Prefix=/Users/admin/Desktop/a/
